--- a/src/views/home.css
+++ b/src/views/home.css
@@ -954,6 +954,16 @@
   justify-content: center;
   background-color: #f2f5f9ff;
 }
+
+.home-cont46 {
+  flex: 0 0 auto;
+  width: 48px;
+  height: 48px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
 .home-icon41 {
   width: 24px;
   height: 24px;
