--- a/src/views/home.css
+++ b/src/views/home.css
@@ -147,7 +147,9 @@
   align-items: center;
   border-radius: var(--dl-radius-radius-radius50);
   flex-direction: column;
-  background-color: var(--dl-color-gray-white);
+ /* background-color: var(--dl-color-gray-white); */
+ background-image: linear-gradient(180deg, #38bdf8, #0284c7);
+
 }
 .home-container05 {
   flex: 0 0 auto;
@@ -173,7 +175,8 @@
   font-family: Open Sans;
 }
 .home-text11 {
-  color: var(--dl-color-secondary-700);
+ /*  color: var(--dl-color-secondary-700); */
+  color: #f2f5f9ff;
   font-size: 1rem;
   margin-top: var(--dl-space-space-halfunit);
   text-align: center;
