--- a/src/views/home.css
+++ b/src/views/home.css
@@ -147,8 +147,8 @@
   align-items: center;
   border-radius: var(--dl-radius-radius-radius50);
   flex-direction: column;
- /* background-color: var(--dl-color-gray-white); */
- background-image: linear-gradient(180deg, #38bdf8, #0284c7);
+ background-color: var(--dl-color-gray-white); 
+
 
 }
 .home-container05 {
